--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,16 +1,17 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-	font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-	margin: 0;
-	font-family: "Poppins", sans-serif;
+    margin: 0;
+    background-color: #fff;
+    font-family: "Poppins", sans-serif;
 }
 
 h1,
@@ -20,11 +21,22 @@ h4,
 p,
 ul,
 li {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+main {
+    margin: 0 -50px;
+    padding: 0 50px;
+    background-color: #f5f5fb;
 }
 
 .container {
-	max-width: 1745px;
-	margin: 0 auto;
+    display: grid;
+    grid-template-columns: 245px 1020px 380px;
+    column-gap: 50px;
+    max-width: 1785px;
+    min-height: 100vh;
+    margin: 0 auto;
+    padding: 0 20px;
 }
