--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -8,6 +8,7 @@
     &__logo {
         display: flex;
         align-items: center;
+        width: fit-content;
         color: $black;
         font-size: 2.7rem;
         font-weight: 600;
@@ -27,12 +28,23 @@
     }
 
     &__menu-item {
-        position: relative;
-        margin-bottom: 55px;
+        margin-bottom: 45px;
 
         &:last-child {
             margin-bottom: 0;
         }
+    }
+
+    &__menu-link {
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding: 7px 0;
+        color: $text-blue;
+        font-size: 1.7rem;
+        font-weight: 500;
+        text-decoration: none;
+        transition: color 0.2s ease-in-out;
 
         &::after {
             content: "";
@@ -46,15 +58,18 @@
             background-color: $blue;
         }
 
+        &--active,
         &:hover,
-        &--active {
-            .header__menu-link {
-                color: $black;
-            }
+        &:focus-visible {
+            color: $black;
 
             .header__menu-icon {
                 fill: $blue;
             }
+        }
+
+        &:focus-visible {
+            outline: none;
         }
 
         &--active {
@@ -64,20 +79,12 @@
         }
     }
 
-    &__menu-link {
-        display: flex;
-        align-items: center;
-        color: $text-blue;
-        font-size: 1.7rem;
-        font-weight: 500;
-        text-decoration: none;
-    }
-
     &__menu-icon {
         width: 24px;
         height: 24px;
         margin-right: 40px;
         fill: $text-blue;
+        transition: fill 0.2s ease-in-out;
     }
 
     &__offer {
@@ -123,5 +130,12 @@
         font-weight: 500;
         text-align: center;
         text-decoration: none;
+        transition: background-color 0.2s ease-in-out;
+
+        &:hover,
+        &:focus-visible {
+            outline: none;
+            background-color: $blue-transparent;
+        }
     }
 }
