--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -2,5 +2,6 @@ $black: #111026;
 $blue: #5e81f4;
 $text-blue: #a2a2c2;
 $text-white: #fefefe;
+$bg-white: #f5f5f7;
 
-$blue-transparent: rgba(94, 129, 244, 0.65);
+$blue-light: #93aaf7;
