--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,7 +1,13 @@
 $black: #111026;
 $blue: #5e81f4;
+$red: #ff808b;
+$purple: #4d4cac;
+$steel: #c8c9e9;
+
 $text-blue: #a2a2c2;
 $text-white: #fefefe;
+
 $bg-white: #f5f5f7;
 
 $blue-light: #93aaf7;
+$text-white-transparent: rgba(254, 254, 254, 0.15);
