--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,3 +1,8 @@
 @import "./icon-button";
+@import "./bar";
 @import "./subject-progress";
 @import "./reminder";
+@import "./paper";
+@import "./result";
+@import "./vertical-bar";
+@import "./course";
