--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -41,10 +41,14 @@ main {
 
 .container {
     display: grid;
-    grid-template-columns: 245px 1020px 380px;
+    grid-template-columns: 245px 1fr 380px;
     column-gap: 50px;
     max-width: 1785px;
     min-height: 100vh;
     margin: 0 auto;
     padding: 0 20px;
+    
+    @media screen and (max-width: $xl) {
+        grid-template-columns: 1fr 380px;
+    }
 }
