--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,9 +1,26 @@
 .header {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 45px 0 25px;
     background-color: #fff;
+
+    @media screen and (max-width: $xl) {
+        position: fixed;
+        left: -100vw;
+        top: 0;
+        z-index: 100;
+        width: 300px;
+        height: 100vh;
+        padding: 45px 0 25px 25px;
+        box-shadow: 0 0 16px rgba(0, 0, 0, 0.35);
+        transition: left 0.3s ease-in-out;
+    }
+
+    &--active {
+        @media screen and (max-width: $xl) {
+            left: 0;
+        }
+    }
 
     &__logo {
         display: flex;
@@ -23,12 +40,24 @@
         margin-right: 25px;
     }
 
+    &__navigation {
+        margin-top: 134px;
+
+        @media screen and (max-width: $xl) {
+            margin-top: 60px;
+        }
+    }
+
     &__menu {
         list-style-type: none;
     }
 
     &__menu-item {
         margin-bottom: 45px;
+
+        @media screen and (max-width: $xl) {
+            margin-bottom: 15px;
+        }
 
         &:last-child {
             margin-bottom: 0;
@@ -56,6 +85,10 @@
             height: 100%;
             border-radius: 10px;
             background-color: $blue;
+
+            @media screen and (max-width: $xl) {
+                right: 1px;
+            }
         }
 
         &--active,
@@ -86,10 +119,18 @@
     &__offer {
         position: relative;
         max-width: 220px;
-        margin-top: 35px;
+        margin-top: 135px;
         padding: 83px 27px 27px;
         border-radius: 17px;
         background-color: $bg-white;
+
+        @media screen and (max-width: $xxl) {
+            margin-top: auto;
+        }
+
+        @media screen and (max-width: $xl) {
+            padding: 55px 20px 20px;
+        }
     }
 
     &__offer-image {
@@ -101,6 +142,10 @@
         max-width: 105px;
         height: auto;
         object-fit: cover;
+
+        @media screen and (max-width: $xl) {
+            max-width: 75px;
+        }
     }
 
     &__offer-text {
@@ -108,6 +153,11 @@
         font-size: 1.6rem;
         line-height: 2.4rem;
         text-align: center;
+
+        @media screen and (max-width: $xl) {
+            font-size: 1.4rem;
+            line-height: 2.2rem;
+        }
     }
 
     &__offer-strong {
@@ -132,6 +182,11 @@
         &:hover,
         &:focus-visible {
             background-color: $blue-light;
+        }
+
+        @media screen and (max-width: $xl) {
+            margin-top: 15px;
+            font-size: 1.4rem;
         }
     }
 }
