--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -44,12 +44,66 @@
         transition: fill 0.2s ease-in-out;
     }
 
+    &__menu-button {
+        display: none;
+
+        @media screen and (max-width: $xl) {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 30px;
+            height: 22px;
+            margin-left: 20px;
+            padding: 0;
+            border: none;
+            background-color: transparent;
+            cursor: pointer;
+        }
+
+        span {
+            width: 100%;
+            height: 2px;
+            border-radius: 8px;
+            background-color: $black;
+            transform-origin: 0 0;
+            transition: transform 0.2s ease-out;
+        }
+
+        &--active {
+            span {
+                &:nth-child(1) {
+                    transform: rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    transform: scale(0) translateY(-50%);
+                }
+
+                &:nth-child(3) {
+                    transform: rotate(-45deg) translate(-3px);
+                }
+            }
+        }
+    }
+
     &__greet {
         position: relative;
         margin-top: 55px;
         padding: 45px 75px;
         border-radius: 17px;
         background-color: #f7e5e9;
+
+        @media screen and (max-width: $xxl) {
+            padding: 25px 35px;
+        }
+    }
+
+    &__greet-text {
+        max-width: 70%;
+
+        @media screen and (max-width: $xxl) {
+            max-width: none;
+        }
     }
 
     &__greet-heading {
@@ -67,18 +121,26 @@
     &__greet-image {
         position: absolute;
         bottom: 3px;
-        right: 20%;
+        right: 15%;
         display: block;
         max-width: 210px;
         height: auto;
         object-fit: cover;
+
+        @media screen and (max-width: $xxl) {
+            display: none;
+        }
     }
 
     &__statistics {
         display: grid;
-        grid-template-columns: 430px 560px;
-        column-gap: 30px;
+        grid-template-columns: minmax(300px, 430px) minmax(300px, 560px);
+        gap: 30px;
         margin-top: 40px;
+
+        @media screen and (max-width: $xxl) {
+            grid-template-columns: 1fr;
+        }
     }
 
     &__subheading {
@@ -153,6 +215,7 @@
     &__spent-bars {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
+        justify-items: center;
         margin-top: 50px;
     }
 
@@ -161,8 +224,9 @@
     }
 
     &__spent-legend {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
+        gap: 20px 10px;
         margin: 50px 0 15px;
     }
 
@@ -205,8 +269,8 @@
 
     &__coureses-grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 25px;
+        grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+        gap: 25px;
         margin-top: 35px;
     }
 }
