personal menu mobile layout, menu's script refactoring

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -47,8 +47,12 @@ main {
     min-height: 100vh;
     margin: 0 auto;
     padding: 0 20px;
-    
+
     @media screen and (max-width: $xl) {
         grid-template-columns: 1fr 380px;
+    }
+
+    @media screen and (max-width: $lg) {
+        grid-template-columns: 1fr;
     }
 }
