--- a/src/scss/blocks/_personal.scss
+++ b/src/scss/blocks/_personal.scss
@@ -4,6 +4,52 @@
     padding: 45px 0 25px 30px;
     background-color: #fff;
 
+    @media screen and (max-width: $lg) {
+        position: fixed;
+        top: 0;
+        left: -100vw;
+        bottom: 0;
+        z-index: 100;
+        overflow: auto;
+        width: 380px;
+        padding: 45px 25px 30px;
+        box-shadow: 0 0 16px rgba(0, 0, 0, 0.35);
+        transition: left 0.3s ease-in-out;
+    }
+
+    &--active {
+        @media screen and (max-width: $lg) {
+            left: 0;
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 15px;
+        left: 25x;
+        display: none;
+
+        &:hover,
+        &:focus-visible {
+            .personal__close-icon {
+                fill: $text-blue;
+            }
+        }
+
+        @media screen and (max-width: $lg) {
+            display: flex;
+            align-items: center;
+            color: $text-blue;
+            font-size: 1.4rem;
+            font-weight: 500;
+        }
+    }
+
+    &__close-icon {
+        margin-right: 10px;
+        transform: rotate(180deg);
+    }
+
     &__logout {
         display: flex;
         align-items: center;
