--- a/src/scss/components/_icon-button.scss
+++ b/src/scss/components/_icon-button.scss
@@ -18,6 +18,10 @@
     &:focus-visible {
         .icon-button__icon {
             fill: $blue;
+
+            @media screen and (max-width: $md) {
+                fill: $text-blue;
+            }
         }
     }
 }
