--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,6 +1,6 @@
 @import "./icon-button";
 @import "./bar";
-@import "./subject-progress";
+@import "./personal-progress";
 @import "./reminder";
 @import "./paper";
 @import "./result";
