badge, personal progress grid fix

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -163,6 +163,11 @@
         }
     }
 
+    &__menu-badge {
+        top: 3px;
+        left: 12px;
+    }
+
     &__menu-icon {
         width: 24px;
         height: 24px;
