min-width fix, dropdown, courses links, bars width style

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -11,3 +11,4 @@ $bg-white: #f5f5f7;
 
 $blue-light: #93aaf7;
 $text-white-transparent: rgba(254, 254, 254, 0.15);
+$steel-transparent: rgba(200, 201, 233, 0.25);
