--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -115,7 +115,7 @@
         }
 
         @media screen and (max-width: $sm) {
-            padding: 20px;
+            padding: 15px;
         }
     }
 
@@ -188,15 +188,10 @@
     }
 
     &__results,
-    &__spent {
+    &__spent,
+    &__coureses-item {
         @media screen and (max-width: $sm) {
-            overflow-x: auto;
-        }
-    }
-
-    &__min-width {
-        @media screen and (max-width: $sm) {
-            min-width: 500px;
+            padding: 15px;
         }
     }
 
@@ -241,42 +236,6 @@
         width: 16px;
         height: 16px;
         margin-left: 20px;
-        fill: $black;
-        transition: fill 0.2s ease-in-out;
-    }
-
-    &__dropdown {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        background-color: transparent;
-        font-size: 1.6rem;
-        cursor: pointer;
-        transition: color 0.2s ease-in-out;
-
-        &:hover,
-        &:focus-visible {
-            color: $blue;
-
-            @media screen and (max-width: $md) {
-                color: $black;
-            }
-
-            .main__dropdown-icon {
-                fill: $blue;
-
-                @media screen and (max-width: $md) {
-                    fill: $black;
-                }
-            }
-        }
-    }
-
-    &__dropdown-icon {
-        width: 16px;
-        height: 16px;
-        margin-left: 7px;
         fill: $black;
         transition: fill 0.2s ease-in-out;
     }
