--- a/src/scss/components/_course.scss
+++ b/src/scss/components/_course.scss
@@ -70,4 +70,10 @@
             }
         }
     }
+
+    &__more-icon {
+        width: 20px;
+        height: 20px;
+        fill: #fff;
+    }
 }
