--- a/src/scss/blocks/_personal.scss
+++ b/src/scss/blocks/_personal.scss
@@ -84,7 +84,8 @@
     }
 
     &__avatar-wrapper {
-        max-width: 170px;
+        width: 170px;
+        height: 170px;
         border-radius: 50%;
         overflow: hidden;
     }
@@ -92,7 +93,7 @@
     &__avatar-image {
         display: block;
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
     }
 
