bar bg-color change for result--low

--- a/src/scss/components/_result.scss
+++ b/src/scss/components/_result.scss
@@ -33,5 +33,9 @@
         .result__percentage {
             color: $red;
         }
+
+        .result__bar::after {
+            background-color: $red;
+        }
     }
 }
