--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -54,6 +54,7 @@
     &__list {
         position: absolute;
         z-index: 1000;
+        transform: translate3d(0, 0, 0);
         min-width: 120px;
         padding: 7px 0;
         opacity: 0;
