dropdown appearance safari fix

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -23,7 +23,7 @@
         .dropdown__list {
             visibility: visible;
             opacity: 1;
-            transform: translateY(0);
+            transform: translateY(0) translate3d(0, 0, 0);
             pointer-events: initial;
         }
     }
@@ -54,7 +54,6 @@
     &__list {
         position: absolute;
         z-index: 1000;
-        transform: translate3d(0, 0, 0);
         min-width: 120px;
         padding: 7px 0;
         opacity: 0;
@@ -62,7 +61,7 @@
         border-radius: 12px;
         background-color: #fff;
         box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
-        transform: translateY(-5px);
+        transform: translateY(-5px) translate3d(0, 0, 0);
         list-style-type: none;
         transition: all 0.2s ease-in-out;
         pointer-events: none;
