--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -21,9 +21,7 @@
         }
 
         .dropdown__list {
-            visibility: visible;
-            opacity: 1;
-            pointer-events: initial;
+            display: block;
         }
     }
 
@@ -53,17 +51,13 @@
     &__list {
         position: absolute;
         z-index: 1000;
+        display: none;
         min-width: 120px;
         padding: 7px 0;
-        opacity: 0;
-        visibility: hidden;
         border-radius: 12px;
         background-color: #fff;
         box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
-        transform: translate3d(0, 0, 0);
         list-style-type: none;
-        transition: all 0.2s ease-in-out;
-        pointer-events: none;
     }
 
     &__item {
