--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -21,7 +21,10 @@
         }
 
         .dropdown__list {
-            display: block;
+            visibility: visible;
+            opacity: 1;
+            transform: translateY(0);
+            pointer-events: initial;
         }
     }
 
@@ -51,13 +54,17 @@
     &__list {
         position: absolute;
         z-index: 1000;
-        display: none;
         min-width: 120px;
         padding: 7px 0;
+        opacity: 0;
+        visibility: hidden;
         border-radius: 12px;
         background-color: #fff;
         box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+        transform: translateY(-5px);
         list-style-type: none;
+        transition: all 0.2s ease-in-out;
+        pointer-events: none;
     }
 
     &__item {
