dropdown appearance safari fix

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -1,9 +1,9 @@
 .dropdown {
     position: relative;
 
-    &:hover,
-    &:focus-visible,
-    &:focus-within {
+    &:hover {
+    // &:focus-visible,
+    // &:focus-within {
         .dropdown__title {
             color: $blue;
 
