safari fix for dropdown focus

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -1,7 +1,9 @@
 .dropdown {
     position: relative;
 
-    &:hover {
+    &:hover,
+    &:focus,
+    &:focus-within {
         .dropdown__title {
             color: $blue;
 
