--- a/src/scss/blocks/_personal.scss
+++ b/src/scss/blocks/_personal.scss
@@ -35,7 +35,7 @@
         transition: color 0.3s ease-in-out;
 
         &:hover,
-        &:focus-visible {
+        &:focus {
             color: $blue;
 
             @media screen and (max-width: $md) {
@@ -112,7 +112,7 @@
         transition: background-color 0.2s ease-in-out;
 
         &:hover,
-        &:focus-visible {
+        &:focus {
             background-color: $blue-light;
 
             @media screen and (max-width: $md) {
