--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,3 +1,4 @@
-@import "./header";
-@import "./main";
-@import "./personal";
+@import './header';
+@import './navigation';
+@import './statistics';
+@import './personal';
