--- a/src/scss/components/_personal-progress.scss
+++ b/src/scss/components/_personal-progress.scss
@@ -1,7 +1,7 @@
 .personal-progress {
     --bar-fill-width: 50%;
     display: grid;
-    grid-template-columns: 53px 1fr 110px;
+    grid-template-columns: 53px 1fr 1fr;
     grid-template-rows: 53px;
     column-gap: 25px;
     align-items: center;
