--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -10,5 +10,7 @@ $text-white: #fefefe;
 $bg-white: #f5f5f7;
 
 $blue-light: #93aaf7;
+
 $text-white-transparent: rgba(254, 254, 254, 0.15);
 $steel-transparent: rgba(200, 201, 233, 0.25);
+$blue-light-transparent: rgba(147, 170, 247, 0.45);
