--- a/src/scss/blocks/_statistics.scss
+++ b/src/scss/blocks/_statistics.scss
@@ -1,107 +1,8 @@
-.main {
+.statistics {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 45px 0 25px;
-
-    &__header {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-    }
-
-    &__date {
-        margin-right: 30px;
-        font-size: 1.7rem;
-        font-weight: 500;
-
-        @media screen and (max-width: $sm) {
-            margin-right: 20px;
-            font-size: 1.4rem;
-        }
-    }
-
-    &__search {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 18px;
-        border: none;
-        border-radius: 12px;
-        background-color: #e5e9fa;
-        cursor: pointer;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover,
-        &:focus {
-            background-color: $blue;
-
-            @media screen and (max-width: $md) {
-                background-color: #e5e9fa;
-            }
-
-            .main__search-icon {
-                fill: #e5e9fa;
-
-                @media screen and (max-width: $md) {
-                    fill: $blue;
-                }
-            }
-        }
-
-        @media screen and (max-width: $sm) {
-            padding: 12px;
-        }
-    }
-
-    &__search-icon {
-        width: 18px;
-        height: 18px;
-        fill: $blue;
-        transition: fill 0.2s ease-in-out;
-    }
-
-    &__menu-button {
-        display: none;
-
-        @media screen and (max-width: $xl) {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 30px;
-            height: 22px;
-            margin-left: 20px;
-            padding: 0;
-            border: none;
-            background-color: transparent;
-            cursor: pointer;
-        }
-
-        span {
-            width: 100%;
-            height: 2px;
-            border-radius: 8px;
-            background-color: $black;
-            transform-origin: 0 0;
-            transition: transform 0.2s ease-out;
-        }
-
-        &--active {
-            span {
-                &:nth-child(1) {
-                    transform: rotate(45deg);
-                }
-
-                &:nth-child(2) {
-                    transform: scale(0) translateY(-50%);
-                }
-
-                &:nth-child(3) {
-                    transform: rotate(-45deg) translate(-3px);
-                }
-            }
-        }
-    }
+    padding: 95px 0 25px;
 
     &__greet {
         position: relative;
@@ -115,7 +16,8 @@
         }
 
         @media screen and (max-width: $sm) {
-            padding: 15px;
+            padding: 70px 15px 25px;
+            text-align: center;
         }
     }
 
@@ -134,6 +36,7 @@
         line-height: 3.7rem;
 
         @media screen and (max-width: $sm) {
+            margin-bottom: 15px;
             font-size: 2rem;
             line-height: 2.8rem;
         }
@@ -172,7 +75,9 @@
         }
 
         @media screen and (max-width: $sm) {
-            display: none;
+            top: -143px;
+            left: 50%;
+            transform: translateX(-50%);
         }
     }
 
@@ -222,7 +127,7 @@
                 color: $black;
             }
 
-            .main__more-icon {
+            .statistics__more-icon {
                 fill: $blue;
 
                 @media screen and (max-width: $md) {
@@ -269,19 +174,19 @@
         font-size: 1.4rem;
 
         &--red {
-            .main__spent-annotation-color {
+            .statistics__spent-annotation-color {
                 background-color: $red;
             }
         }
 
         &--blue {
-            .main__spent-annotation-color {
+            .statistics__spent-annotation-color {
                 background-color: $blue;
             }
         }
 
         &--purple {
-            .main__spent-annotation-color {
+            .statistics__spent-annotation-color {
                 background-color: $purple;
             }
         }
