--- a/src/scss/components/_result.scss
+++ b/src/scss/components/_result.scss
@@ -14,6 +14,10 @@
     &__description {
         color: $text-blue;
         font-size: 1.6rem;
+
+        @media screen and (max-width: $sm) {
+            font-size: 1.4rem;
+        }
     }
 
     &__description-strong {
