--- a/src/scss/blocks/_personal.scss
+++ b/src/scss/blocks/_personal.scss
@@ -34,6 +34,16 @@
         height: 170px;
         border-radius: 50%;
         overflow: hidden;
+
+        @media screen and (max-width: $lg) {
+            width: 230px;
+            height: 230px;
+        }
+
+        @media screen and (max-width: $sm) {
+            width: 170px;
+            height: 170px;
+        }
     }
 
     &__avatar-image {
